@@ -33,7 +33,7 @@
         <outputPath>target</outputPath>
         <runtime.assembly>none</runtime.assembly>
         <javac.target>25</javac.target>
-        <argLine>-ea -Dfile.encoding=UTF-8 -XX:+UseParallelGC --sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.time.zone=ALL-UNNAMED</argLine>
+        <argLine>-ea -Dfile.encoding=UTF-8 -XX:+UseParallelGC --sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.time.zone=ALL-UNNAMED --add-exports=java.base/jdk.internal.vm=ALL-UNNAMED --add-exports=java.base/jdk.internal.vm=io.questdb</argLine>
         <test.exclude>None</test.exclude>
         <test.include>%regex[.*[^o].class]</test.include><!-- exclude module-info.class-->
         <web.console.version>1.2.3</web.console.version>
@@ -45,10 +45,10 @@
         -->
         <qdbr.rustflags>-D warnings</qdbr.rustflags>
 
-        <questdb.client.version>1.3.4</questdb.client.version>
+        <questdb.client.version>1.3.5-SNAPSHOT</questdb.client.version>
     </properties>
 
-    <version>9.4.3-SNAPSHOT</version>
+    <version>9.4.4-SNAPSHOT</version>
     <groupId>org.questdb</groupId>
     <artifactId>questdb</artifactId>
     <packaging>jar</packaging>
@@ -99,6 +99,8 @@
                     <compilerArgs>
                         <arg>-J-XX:-TieredCompilation</arg>
                         <arg>-J-XX:TieredStopAtLevel=1</arg>
+                        <arg>--add-exports=java.base/jdk.internal.vm=io.questdb</arg>
+                        <arg>--add-exports=java.base/jdk.internal.vm=io.questdb.test</arg>
                     </compilerArgs>
                     <fork>true</fork>
                     <source>${javac.compile.source}</source>
@@ -236,7 +238,7 @@
         <profile>
             <id>local-client</id>
             <properties>
-                <questdb.client.version>1.3.4</questdb.client.version>
+                <questdb.client.version>1.3.5-SNAPSHOT</questdb.client.version>
             </properties>
         </profile>
         <profile>
@@ -260,6 +262,9 @@
                             <sourceFileExcludes>
                                 <sourceFileExclude>${excludePattern1}</sourceFileExclude>
                             </sourceFileExcludes>
+                            <additionalOptions>
+                                <additionalOption>--add-exports java.base/jdk.internal.vm=io.questdb</additionalOption>
+                            </additionalOptions>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -286,6 +291,9 @@
                             <sourceFileExcludes>
                                 <sourceFileExclude>${excludePattern1}</sourceFileExclude>
                             </sourceFileExcludes>
+                            <additionalOptions>
+                                <additionalOption>--add-exports java.base/jdk.internal.vm=io.questdb</additionalOption>
+                            </additionalOptions>
                         </configuration>
                     </plugin>
                     <plugin>
